--- a/html_card/links.html
+++ b/html_card/links.html
@@ -68,9 +68,9 @@
     <img src="nana_new.png" alt="Lizzie Profile">
     <h1>★ Elizabet Tsutsova ★</h1>
     <p>"I put the <strong>fun</strong> in <strong>dysfunctional</strong>"</p>
-    <a href="https://github.com/b3ths1">GitHub</a>
-    <a href="https://www.instagram.com/b3ths1/">Instagram</a>
-    <a href="https://open.spotify.com/user/31wo6tyy7jdjf7b2qcjtb52nm2ge">Spotify</a>
+    <a href="https://social.mtdv.me/blog/posts/b3ths1">GitHub</a>
+    <a href="https://social.mtdv.me/blog/posts/b3ths1">Instagram</a>
+    <a href="https://social.mtdv.me/blog/posts/b3ths1">Spotify</a>
   </div>
 </body>
 </html>
